<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunAnd</string>
    <string name="run_and_splash1">RunAnd</string>
    <string name="run_and_splash2">Just run and ...</string>
    <string name="title_activity_login">Login</string>
    <string name="login_header">Zaloguj się by zyskać dostęp do treningów</string>
    <string name="action_settings">Ustawienia</string>
    <string name="login_password">Hasło</string>
    <string name="loginEmail">E-mail</string>
    <string name="loginTextViewEmail">Email:</string>
    <string name="textViewPassword">Hasło:</string>
    <string name="loginButton">Zaloguj się</string>
    <string name="loginForgotPassword">Zapomniałem hasła</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map_look">MapLook</string>
    <string name="menu_logout">Wyloguj</string>
    <string name="title_activity_list_tracks">Lista Tras</string>
    <string name="title_activity_training">Training</string>
    <string name="startTraining">Rozpocznij Trening</string>
    <string name="stopTraining">Zakończ Trening</string>
    <string name="showTrainingHistory">Historia Treningów</string>
    <string name="training">Trening</string>
    <string name="title_activity_training_detail">TrainingDetailActivity</string>
    <string name="skip_login">SkipLogin</string>
    <string name="Register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="textViewRepeatPassword">Powtórz Hasło:</string>
    <string name="RegisterBtn">Zarejestruj</string>
    <string name="register_password">Hasło</string>
    <string name="password_is_required">Pole "Hasłoa" jest wymagane!</string>
    <string name="email_is_not_valid">Niepoprawny Email!</string>
    <string name="email_is_required">Pole Email jest wymagane!</string>
    <string name="email_and_password_are_required">Pola "Email" i "Hasło" są wymagane!</string>
    <string name="passwords_must_be_identical">Hasła muszą być identyczne!</string>
    <string name="can_not_get_G_data">Nie można pobrać wymaganych danych konta Google</string>
    <string name="not_logged">Niezalogowany</string>
    <string name="user">Użytkownik: </string>
    <string name="profile_information_menu_button">Moje dane</string>
    <string name="login_menu_button">Zaloguj się</string>
    <string name="add_trainer_menu_button">Dodaj trenera</string>
    <string name="title_activity_profile_information">ProfileInformation</string>
    <string name="title_activity_add_trainer">AddTrainer</string>
    <string name="chooseTrack">Wybierz Trasę</string>
    <string name="normalTraining">Normalny Trening</string>
    <string name="routeTraining">Trening Po Trasie</string>
    <string name="notLoginTraining">Trening Bez Logowania</string>
    <string name="refresh">Odświerz</string>
    <string name="TrackSavedMessage">Trasa zapisana na serwerze</string>
    <string name="TrainingSavedMessage">Trening został zapisany na serwerze</string>
    <string name="refreshProfileInformation">Odśwież</string>
    <string name="profile_email_address_text">ADRES EMAIL:</string>
    <string name="profile_trainer_email_address_text">ADRES EMAIL TRENERA:</string>
    <string name="remove_trainer_button">Zwolnij trenera</string>
    <string name="change_password_txt">Zmiana hasła:</string>
    <string name="change_password_btn">Zmień hasło</string>
    <string name="set_password_txt">To konto nie ma jeszcze ustawionego hasła!\nUstaw hasło:</string>
    <string name="set_password_btn">Ustaw hasło</string>
    <string name="no_trainer_profile_info">Brak</string>
    <string name="write_password1">podaj nowe hasło:</string>
    <string name="write_password2">powtórz nowe hasło:</string>
    <string name="password_too_short">Hasło jest za krótkie</string>
    <string name="password_set_ok">Nowe hasło zostało ustawione</string>
    <string name="title_activity_training_summation">Podsumowanie Treningu</string>
    <string name="takePicture">Zrób zdjęcie</string>
    <string name="no_track_selected_warning">Nie wybrano trasy</string>
    <string name="one_track_can_be_choosen_warning">Tylko jedna trasa może być wybrana</string>
    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#0099cc</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">italic</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">3</item>
    </style>
</resources>
