<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mp.runand.app.activities.Login"
    android:background="#0099cc">

    <!--Need to change background text style and button layout-->
    <TextView
        android:text="@string/login_header"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:textSize="16sp"
        android:gravity="center"
        android:id="@+id/loginHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/loginEmail"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_below="@+id/loginHeader"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/login_password"
        android:layout_below="@+id/email"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@+id/textViewPassword"
        android:layout_toEndOf="@+id/textViewPassword" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/loginTextViewEmail"
        android:id="@+id/textViewEmail"
        android:layout_alignTop="@+id/email"
        android:layout_toLeftOf="@+id/email"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/textViewPassword"
        android:id="@+id/textViewPassword"
        android:layout_alignBottom="@+id/password"
        android:layout_alignRight="@+id/textViewEmail"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/login"
        android:textSize="13sp"
        android:textColor="#0099cc"

        android:layout_below="@id/textViewPassword"
        android:background="@drawable/button_fb"
        style="@style/ButtonText"
        android:layout_marginTop="30dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/notLoggedTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notLoginTraining"
        android:layout_below="@id/btn_sign_in"
        android:layout_centerInParent="true"
        android:background="@drawable/button_fb"
        style="@style/ButtonText"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/skip_login"
        android:id="@+id/skipLogin"
        android:layout_above="@+id/register"
        android:layout_alignLeft="@+id/register"
        android:background="@drawable/button_fb"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:textSize="12sp"
        android:text="@string/Register"
        android:id="@+id/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_fb"/>

</RelativeLayout>
