<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mp.runand.app.activities.Register">

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:hint="@string/loginEmail"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_below="@+id/loginHeader"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        android:textColor="#000000"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/register_password"
        android:layout_below="@+id/email"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/textViewPassword"
        android:layout_toEndOf="@+id/textViewPassword" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password2"
        android:hint="@string/register_password"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_toEndOf="@+id/textViewPassword"
        android:layout_below="@+id/password" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/loginTextViewEmail"
        android:id="@+id/textViewEmail"
        android:layout_alignTop="@+id/email"
        android:layout_toLeftOf="@+id/email"
        android:textSize="15sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/textViewPassword"
        android:id="@+id/textViewPassword"
        android:layout_alignBottom="@+id/password"
        android:layout_alignRight="@+id/textViewEmail"
        android:textSize="15sp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:text="@string/textViewRepeatPassword"
        android:id="@+id/textViewPassword2"
        android:textSize="15sp"
        android:textColor="#000000"
        android:layout_below="@+id/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterBtn"
        android:id="@+id/register"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/textViewPassword2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
