<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mp.runand.app.activities.TrainingActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTraining"
        android:id="@+id/startTrainingButton"
        android:layout_x="110dp"
        android:layout_y="48dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopTraining"
        android:id="@+id/stopTrainingButton"
        android:layout_x="114dp"
        android:layout_y="158dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showTrainingHistory"
        android:id="@+id/showHistoryButton"
        android:layout_x="130dp"
        android:layout_y="275dp" />
</AbsoluteLayout>
